<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mega.deviceapp.activity.WifiAPConfigureActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBar_Theme_White"
        android:titleTextColor="#fff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:id="@+id/ap_state_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/title_server_wlan_hotspot"/>
            <Switch
                android:id="@+id/switch_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_gravity="end"/>
        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/network_name"/>
    <EditText
        android:id="@+id/ssid_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_ssid"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:text="@string/wifi_ap_security"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/wifiap_security"
        />

    <LinearLayout
        android:id="@+id/pw_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/wifi_ap_password"/>

    <EditText
        android:id="@+id/pw_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_the_password"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_sum"/>

        <CheckedTextView
            android:id="@+id/checkbox_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:gravity="center"
            android:text="@string/show_password" />
    </LinearLayout>

    <Button
        android:id="@+id/setup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance"
        android:text="@string/set_up_server_wlan_hotspot"/>

</LinearLayout>
</LinearLayout>
