<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="#fff"
        android:theme="@style/ToolBar_Theme_White"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:background="@mipmap/bluetooth_devices_bg">
            <TextView
                android:text="@string/paired_devices"
                style="@style/search_devices_textStyle"
                />
            <ListView
                android:id="@+id/listview_matched"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:divider="@mipmap/listview_divider">
            </ListView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:background="@mipmap/bluetooth_devices_bg">
            <TextView
                android:text="@string/available_devices"
                style="@style/search_devices_textStyle"
                />
            <ListView
                android:id="@+id/listview_not_match"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:divider="@mipmap/listview_divider">
            </ListView>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_search_new_bluetooth"
        android:text="@string/search_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="@mipmap/search_bluetooth_bg"
        />
</LinearLayout>